--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/manojkumargit/NewEnvironmentForReact#readme",
   "dependencies": {
     "autoprefixer-stylus": "^0.13.0",
+    "axios": "^0.15.3",
     "axis": "^1.0.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.18.2",
@@ -27,6 +28,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.17.1",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -37,6 +39,8 @@
     "mongoose": "^4.9.0",
     "mongoose-double": "^0.0.1",
     "nib": "^1.1.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
