--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "babel-preset-stage-0": "^6.16.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
+    "express-session": "^1.15.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-fetch": "^2.2.1",
