--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nothing much",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint src",
     "start": "node node_modules/babel-cli/bin/babel-node.js server.js"
   },
   "repository": {
@@ -31,6 +31,10 @@
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.26.1",
+    "eslint": "^3.18.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
     "express-session": "^1.15.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -39,6 +43,8 @@
     "jeet": "^7.1.0",
     "jsonwebtoken": "^7.3.0",
     "line-input-stream": "^1.0.1",
+    "linter": "^0.0.7",
+    "lodash": "^4.17.4",
     "mongoose": "^4.9.0",
     "mongoose-double": "^0.0.1",
     "nib": "^1.1.2",
@@ -61,5 +67,8 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2",
     "webpack-manifest-plugin": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^14.1.0"
   }
 }
